--- a/css/blocks/footer.css
+++ b/css/blocks/footer.css
@@ -3,6 +3,13 @@
   width: 100%;
   height: 146px;
 }
+.footer:before {
+  content: "";
+  
+  border-top: 1px solid #fff;
+  opacity: 0.1;
+}
+
 .footer--services{
  
 height: 132px;
@@ -13,9 +20,10 @@ height: 132px;
   align-items: center;
 }
 
-.footer__content--line {
+/* .footer__content--line {
   border-top: 1px solid #fff;
   opacity: 0.1;
   margin-bottom: 40px;
-}
+} */
+
 
