--- a/css/main.css
+++ b/css/main.css
@@ -18,3 +18,10 @@
 @import url(/css/blocks/partners.css);
 @import url(/css/blocks/title.css);
 @import url(/css/blocks/button.css);
+@import url(/css/blocks/forms.css);
+@import url(/css/blocks/review.css);
+@import url(/css/blocks/reviws.css);
+@import url(/css/blocks/sale.css);
+@import url(/css/blocks/form.css);
+@import url(/css/blocks/tag.css);
+@import url(/css/blocks/welcome.css);
