--- a/css/blocks/contacts.css
+++ b/css/blocks/contacts.css
@@ -16,33 +16,61 @@
 
 }
 
-.contacts__workhours {
+.contacts__link {
   font-size: 13px;
   text-decoration: underline;
   color: #FF3D00 ;
   display: block;
-}
+  padding-bottom: 10px;
 
-.contacts__workhours-tooltip {
+}
+.contacts__workhours{
   position: relative;
+  
+}
+.contacts__workhours:hover .contacts__workhours-tooltip{
+  display: block;
+  left: 0;
+  opacity: 1;
+
+}
+.contacts__workhours-tooltip {
+  position: absolute;
   font-size: 13px;
+  max-width: 160px;
+  max-height: 80px;
   padding: 15px 19px;
-  width: 160px;
-  height: 80px;
+  line-height: 21px;
   background: #CDD1D2;
-  text-align: center;
   color: #000;
-  opacity: 0.8;
   border-radius: 3%;
-  visibility: hidden;
-border-top: 10px solid #000;  
-border-left: 10px solid transparent;
-border-right: 10px solid transparent;
-bottom: 20px;
-margin-left:-10px;
+  top: 100%;
+  display: none;
+  left: -9999px;
+  opacity: 0;
+  transition: opacity .4s;
+  text-align: start;
 }
 
-.contacts__workhours:hover ~ .contacts__workhours-tooltip{
-  content: '';
-  visibility:visible;
+.contacts__workhours-tooltip:before {
+content: "";
+display: block;
+height: 30px;
+left: 0;
+right: 0;
+top: -29px;
+position: absolute;
+}
+
+.contacts__workhours-tooltip:after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 0;
+  border: 11px solid transparent;
+  border-top-width: 0;
+  border-bottom-color:#CDD1D2; ;
+  position: absolute;
+  bottom: 100%;
+  right: 40px;
 }
