--- a/css/blocks/review.css
+++ b/css/blocks/review.css
@@ -19,7 +19,7 @@
 }
 .review__header {
   display: flex;
-  text-align: center;
+  align-items: center;
   margin-bottom: 27px;
  
 }
@@ -48,6 +48,7 @@ text-decoration: underline;
 .review__name:after{
 content: url(/img/reviews/vk-blue\ 1.png);
 height: 30px;
+margin-left: 7px;
 }
 
 .review__title {
