--- a/css/blocks/welcome.css
+++ b/css/blocks/welcome.css
@@ -16,6 +16,7 @@
   align-items: center;
 }
 
+
 .welcome__logo {
   margin-bottom: 38px;
 }
@@ -40,8 +41,8 @@ to {
 }
 }
 
-/* .welcome__record {
-  background: url(/img/welcome/rec.png) center top/cover no-repeat;
-  width: 100%;
-  height: 100%;
-} */
+.welcome__record {
+  background: url(/img/welcome/rec.png) center center/cover no-repeat;
+  max-width: 1128px;
+  max-height: 396px;
+}
