--- a/css/blocks/header_services.css
+++ b/css/blocks/header_services.css
@@ -1,5 +1,5 @@
 .header_services{ 
-  padding-bottom: 28px;
+  padding-bottom: 20px;
 }
 .header-services__wrapper {
   display: flex;
@@ -8,14 +8,14 @@
   justify-content: space-between;
   min-height: 416px;
   background: url(/img/img.services/top-line.jpg) center top no-repeat;
- /* padding-bottom: 94px; */
+ /* padding-bottom: 20px; */
 }
 
 .header_services__title {
   font-size: 72px;
  font-weight: bold;
  line-height: 1.1;
- margin-bottom: 83px;
+ margin-bottom: 95px;
  text-transform: uppercase;
 }
 
@@ -24,7 +24,7 @@
   align-items: center;
 }
 .header_services__item:after {
-content: "/";
+content: "/  ";
 color: #9A9A9A;
 }
 .header_services__item:last-child:after {
@@ -45,3 +45,6 @@ color: #9A9A9A;
   
 }
 
+.header--small {
+  margin-bottom: 75px;
+}
