--- a/css/layout/base.css
+++ b/css/layout/base.css
@@ -11,7 +11,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osk-font-smoothing: grayscale;
 }
-
+.button {
+  cursor: pointer;
+}
 a {
   color: inherit;
 }
@@ -23,8 +25,9 @@ p {
 * {
   box-sizing: border-box;
 }
-
-
+*:hover {
+  transition: 0.5s
+}
 h1,h2,h3,h4,h5,h6 {
   margin: 0;
   font-weight: normal;
@@ -50,18 +53,16 @@ img {
 }
 
 .wrapper {
-  /* overflow: hidden;
-  min-width: 1200px;
-  min-height: 100%; */
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   background: url(/img/hero.jpg) center top no-repeat, url(/img/bottom-pic.png) right bottom 306px no-repeat;
+  
 }
 .wrapper--services {
   background: none;
 }
-
 
 
 
