--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,27 @@
-@import url(/css/layout/fonts.css);
-@import url(/css/layout/normalize.css);
-@import url(/css/layout/base.css);
+@import url(css/layout/fonts.css);
+@import url(css/layout/normalize.css);
+@import url(css/layout/base.css);
 
-@import url(/css/blocks/about.css);
-@import url(/css/blocks/contacts.css);
-@import url(/css/blocks/footer.css);
-@import url(/css/blocks/header.css);
-@import url(/css/blocks/hello.css);
-@import url(/css/blocks/logo.css);
-@import url(/css/blocks/menu.css);
-@import url(/css/blocks/news.css);
-@import url(/css/blocks/offers.css);
-@import url(/css/blocks/paginator.css);
-@import url(/css/blocks/social.css);
-@import url(/css/blocks/header_services.css);
-@import url(/css/blocks/offers_services.css);
-@import url(/css/blocks/partners.css);
-@import url(/css/blocks/title.css);
-@import url(/css/blocks/button.css);
-@import url(/css/blocks/forms.css);
-@import url(/css/blocks/review.css);
-@import url(/css/blocks/reviws.css);
-@import url(/css/blocks/sale.css);
-@import url(/css/blocks/form.css);
-@import url(/css/blocks/tag.css);
-@import url(/css/blocks/welcome.css);
+@import url(css/blocks/about.css);
+@import url(css/blocks/contacts.css);
+@import url(css/blocks/footer.css);
+@import url(css/blocks/header.css);
+@import url(css/blocks/hello.css);
+@import url(css/blocks/logo.css);
+@import url(css/blocks/menu.css);
+@import url(css/blocks/news.css);
+@import url(css/blocks/offers.css);
+@import url(css/blocks/paginator.css);
+@import url(css/blocks/social.css);
+@import url(css/blocks/header_services.css);
+@import url(css/blocks/offers_services.css);
+@import url(css/blocks/partners.css);
+@import url(css/blocks/title.css);
+@import url(css/blocks/button.css);
+@import url(css/blocks/forms.css);
+@import url(css/blocks/review.css);
+@import url(css/blocks/reviws.css);
+@import url(css/blocks/sale.css);
+@import url(css/blocks/form.css);
+@import url(css/blocks/tag.css);
+@import url(css/blocks/welcome.css);
