--- a/css/main.css
+++ b/css/main.css
@@ -8,20 +8,20 @@
 @import url(blocks/header.css);
 @import url(blocks/hello.css);
 @import url(blocks/logo.css);
-@import url(./css/blocks/menu.css);
-@import url(./css/blocks/news.css);
-@import url(./css/blocks/offers.css);
+@import url(blocks/menu.css);
+@import url(blocks/news.css);
+@import url(blocks/offers.css);
 @import url(blocks/paginator.css);
-@import url(./css/blocks/social.css);
-@import url(./css/blocks/header_services.css);
-@import url(./css/blocks/offers_services.css);
-@import url(./css/blocks/partners.css);
-@import url(./css/blocks/title.css);
-@import url(./css/blocks/button.css);
-@import url(./css/blocks/forms.css);
-@import url(./css/blocks/review.css);
-@import url(./css/blocks/reviws.css);
-@import url(./css/blocks/sale.css);
-@import url(./css/blocks/form.css);
-@import url(./css/blocks/tag.css);
-@import url(./css/blocks/welcome.css);
+@import url(blocks/social.css);
+@import url(blocks/header_services.css);
+@import url(blocks/offers_services.css);
+@import url(blocks/partners.css);
+@import url(blocks/title.css);
+@import url(blocks/button.css);
+@import url(blocks/forms.css);
+@import url(blocks/review.css);
+@import url(blocks/reviws.css);
+@import url(blocks/sale.css);
+@import url(blocks/form.css);
+@import url(blocks/tag.css);
+@import url(blocks/welcome.css);
