--- a/css/blocks/social.css
+++ b/css/blocks/social.css
@@ -22,7 +22,7 @@
   }
   
   .social-list__item--icon--telegram .social-list__link {
-    background-image: url(../../../img/telegram.png);
+    background-image: url(../img/telegram.png);
   }
   
   .social-list__item--icon--telegram .social-list__link:hover {
@@ -31,7 +31,7 @@
   
   
   .social-list__item--icon--vk .social-list__link {
-    background-image: url(img/vk.png);
+    background-image: url(../img/vk.png);
   }
   
   .social-list__item--icon--vk .social-list__link:hover {
