--- a/css/blocks/social.css
+++ b/css/blocks/social.css
@@ -22,20 +22,20 @@
   }
   
   .social-list__item--icon--telegram .social-list__link {
-    background-image: url(../img/telegram.png);
+    background-image: url(../../../img/telegram.png);
   }
   
   .social-list__item--icon--telegram .social-list__link:hover {
-    background-image: url(img/telegram2\ .png);
+    background-image: url(../../../img/telegram2 .png);
   }
   
   
   .social-list__item--icon--vk .social-list__link {
-    background-image: url(../img/vk.png);
+    background-image: url(../../../img/vk.png);
   }
   
   .social-list__item--icon--vk .social-list__link:hover {
-    background-image: url(img/vk2.png);
+    background-image: url(../../../img/vk2.png);
   }
   
   
