--- a/css/blocks/about.css
+++ b/css/blocks/about.css
@@ -7,7 +7,7 @@
   
   width:490px;
 height:505px;
-background: url(../../../img/cameraman.jpg) center center / cover no-repeat;
+background: url(../../img/cameraman.jpg) center center / cover no-repeat;
 }
 
 .about {
