--- a/css/blocks/header_services.css
+++ b/css/blocks/header_services.css
@@ -7,7 +7,7 @@
   flex: 1;
   justify-content: space-between;
   min-height: 416px;
-  background: url(/img/img.services/top-line.jpg) center top no-repeat;
+  background: url(../../img/img.services/top-line.jpg) center top no-repeat;
  /* padding-bottom: 20px; */
 }
 
