--- a/css/blocks/sale.css
+++ b/css/blocks/sale.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background:  #373737 url(/img/reviews/party.png) right 20% bottom no-repeat ;
+  background:  #373737 url(./img/reviews/party.png) right 20% bottom no-repeat ;
   min-height: 363px;
 }
 .sale__wrapper {
